--- a/complex/.travis.yml
+++ b/complex/.travis.yml
@@ -20,4 +20,17 @@ after_success:
   - docker push skaldat/multi-nginx
   - docker push skaldat/multi-server
   - docker push skaldat/multi-worker
-  
+
+deploy:
+  provider: elasticbeanstalk
+  region: eu-central-1
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-eu-central-1-104288539544
+  bucker_path: docker-multi
+  on:
+    branch: master
+  access_key_id:
+    secure: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
