--- a/simplek8s/client-pod.yaml
+++ b/simplek8s/client-pod.yaml
@@ -7,6 +7,6 @@ metadata:
 spec:
   containers:
   - name: client
-    image: skaldat/multi-client
+    image: skaldat/multi-worker
     ports:
-      - containerPort: 3000
+      - containerPort: 9999
